Bug 72778 - FORMATTING Date format dialogue box is unusable
Summary: FORMATTING Date format dialogue box is unusable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: Other Linux (All)
: high critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.3.0 target:4.2.0.2
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-12-17 07:14 UTC by David Delma
Modified: 2013-12-18 17:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
the useless dialog box (41.66 KB, image/png)
2013-12-17 07:14 UTC, David Delma
Details
alternattive (42.23 KB, image/png)
2013-12-17 07:20 UTC, David Delma
Details
the useless dialog box (41.66 KB, image/png)
2013-12-17 07:30 UTC, David Delma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Delma 2013-12-17 07:14:44 UTC
Created attachment 90861 [details]
the useless dialog box

I have found an annoynce when formating dates in calc.How to reproduce the bug
1. select French Burkina Faso as default for number format
2. type a date in a cell (in shows internal number)
3. Go to format/cell

I get a dialog box to select the desired date format but the options in there will not produce an effect. cf attachement

If I select an other language in the same box (eg French Burkina) it works. This is annoying for I have to do it over and over again in a session


PS Other number formats (currency, standard etc.) work well

faithfully
Comment 1 David Delma 2013-12-17 07:20:03 UTC
Created attachment 90862 [details]
alternattive
Comment 2 David Delma 2013-12-17 07:30:43 UTC
Created attachment 90863 [details]
the useless dialog box
Comment 3 David Delma 2013-12-17 07:33:13 UTC
I have udated the screenshots. The previous one was set as texte!
Comment 4 Eike Rathke (retired, only occasionally showing up) 2013-12-18 11:49:39 UTC
I don't know what you exactly were talking about ;-)  but I do see problems in date formats of the default locale after having switched the locale under Tools->Options->LanguageSettings, not only with French Burkina Farso. Same happens when invoking the application with a different LC_CTYPE locale.
Comment 5 Commit Notification 2013-12-18 17:10:49 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cc54c08a66046c00af3713fbe5e69995ccb7f73b

resolved fdo#72778 keep setting system locale and LanguageTag in sync



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-12-18 17:17:17 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72c08bbb00ac9c10b9e41a693728be9814b64a83&h=libreoffice-4-2

resolved fdo#72778 keep setting system locale and LanguageTag in sync


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.