resolved fdo#72778 keep setting system locale and LanguageTag in sync

Change-Id: I3547786bf77b8f611bc08d0e52c66ac00e199f13